--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: A professional site with a touch of whimsy
 markdown: kramdown
 theme: minima
 plugins: [jekyll-feed]
+permalink: /:title/
+
